# Gosei-dataset

./: README.md  pyproject.toml  test.py
release_test/: pyvenv.cfg
src/Goseidataset/: timeseries.py
src/goseidataset/: __init__.py  generatedataset.py  merge_dataset.py  missingvaluegenerator.py  timeseries.py
src/goseidataset.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_generatedataset.ipynb  test_merge_dataset.ipynb  test_missingvaluegenerator.ipynb  test_timeseries.ipynb
