[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goseidataset"
version = "0.1.0"
description = "Dataset generation, missing value simulation, time series generation and dataset merging."
authors = [
    {name = "Harihara Suthan"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn"
]